# CPP-for-programmers

./: 1a  1b
Task 1/src/: 1a.cpp
Task 10/: CMakeLists.txt  LICENSE  README.md  glut_shapes.c  main.cpp
Task 10/cmake/: FindGLM.cmake
Task 3/src/: 3.4.cpp
Task 4/src/: 4.1.cpp  4.2.cpp
Task 5/: CMakeLists.txt
Task 5/src/: 5a.cpp  5b.cpp
Task 6/: CMakeLists.txt
Task 6/src/: 6a.cpp  6b.cpp
Task 7/: CMakeLists.txt
Task 7/src/: 7.1.cpp  7.2.cpp  fraction.hpp  set.hpp
Task 8/: CMakeLists.txt
Task 8/src/: 7.1.cpp  8.1.cpp  pair.hpp
Task 9/: CMakeLists.txt
Task 9/src/: 8.2.cpp  9.1.cpp  9.cpp
Task1/: CMakeLists.txt
Task1/src/: 1b.cpp
Task3/: CMakeLists.txt
Task4/: CMakeLists.txt
Task4/src/: 4.1.cpp  4.2.cpp
Task7/: CMakeLists.txt
Task7/src/: 6a.cpp  7.1.cpp  7a.cpp  fraction.hpp  fractionOperations.hpp
